--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "vite-project",
+  "name": "grocery_cart_banner",
   "private": true,
+  "homepage": "https://shishel-zaitcevich.github.io/grocery_cart_banner/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -32,6 +35,7 @@
     "prettier": "^3.3.3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
-    "vite": "^5.4.9"
+    "vite": "^5.4.9",
+    "vite-plugin-gh-pages": "^1.0.0"
   }
 }
